--- a/style.css
+++ b/style.css
@@ -720,7 +720,11 @@
             .footer-links a {
                 font-size: 10px;
             }
-        
+            #social-links a {
+
+                font-size: 15px;
+               
+            }
             
         }
         
@@ -819,6 +823,9 @@
                 height: 45vh;
               
             }
+            .hero-content{
+                margin-top: 10px;
+            }
             
 
             .hero2 h3 {
@@ -849,6 +856,12 @@
             .footer-links a {
                 font-size: 8px;
             }
+                 
+        #social-links a {
+
+            font-size: 10px;
+           
+        }
         
            
         }
