--- a/style.css
+++ b/style.css
@@ -813,10 +813,11 @@
                
             }
             .hero h1{
-                font-size: 20px;
+                font-size: 15px;
             }
             .hero p{
                 font-size: 10px;
+                margin: 0px 10px;
             }
             .hero2 {
         
