--- a/style.css
+++ b/style.css
@@ -817,7 +817,7 @@
             }
             .hero p{
                 font-size: 10px;
-                margin: 0px 20px;
+                margin: 0px 20px 10px 20px;
             }
             .hero2 {
         
