--- a/style.css
+++ b/style.css
@@ -723,6 +723,7 @@
             #social-links a {
 
                 font-size: 15px;
+
                
             }
             
@@ -860,8 +861,10 @@
                  
         #social-links a {
 
-            font-size: 8px;
-           
+            font-size: 6px;
+           margin-top: 5px;
+           width: 20px;
+           height: 20px;
         }
         
            
