--- a/style.css
+++ b/style.css
@@ -726,6 +726,15 @@
 
                
             }
+
+            .cta-button {
+               
+                width: 40px;
+                height: 40px;
+                font-size: 14px;
+             
+              
+            }
             
         }
         
