--- a/style.css
+++ b/style.css
@@ -326,21 +326,25 @@
             font-size: 20px;
             text-decoration: none;
             border-radius: 50%;
-          
+            border:1px solid white;
+            background: linear-gradient(85deg, #a596a498, #fff5d893) ;
             transition: background 0.3s, transform 0.3s;
         }
 
-
+        
+       
+        .whatsapp:hover {  background: linear-gradient(85deg, #3feb7bd8, #b0ffccd0) }
+        .facebook:hover {   background: linear-gradient(85deg, #145cbbcb, #2679eec7) }
+        .twitter:hover {  background: linear-gradient(25deg, #74caffde, #4cc2f8d8) }
+/* 
         .whatsapp { background-color: #25d366; }
         .facebook { background-color: #1877f2; }
         .twitter { background-color: #1da1f2; }
 
 
-        .whatsapp:hover {  background: linear-gradient(85deg, #30dd6c, #015a20) }
-        .facebook:hover {   background: linear-gradient(85deg, #145dbb, #02214b) }
-        .twitter:hover {  background: linear-gradient(25deg, #0d95e8, #00344d) }
+       
 
-  
+   */
         .expanded {
             max-height: 200px;
         }
