--- a/style.css
+++ b/style.css
@@ -813,6 +813,9 @@
                 margin-top: 55px;
             }
             
+            .hero-content h1{
+                margin-bottom: 0;
+            }
 
             .hero2 h3 {
                 font-size: 14px;
